[package]
name = "warboss_waaghit_package"
version = "0.1.0"
authors = ["Jacob Williams <bayswaterpc@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "owaagh_lib"
path = "src/lib.rs"

[[bin]]
name = "owaagh"
path = "src/main.rs"

[dependencies]
eframe = "0.10.0" # Gives us egui, epi and web+native backends
rand = "0.8.0"
serde = { version = "1", features = ["derive"], optional = true }
walkdir = "2"
glob = "0.3.0"
dirs = "3.0.1"
directories = "3.0.1"
wfd = "0.1.7"
enum-iterator = "0.6.0"
chrono = "0.4"


[features]
default = ["persistence"]
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
